// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item renders 1`] = `
<body>
  <div>
    <button
      class="Item button Button text md"
      type="button"
    >
      Hi
    </button>
  </div>
  <div>
    <div
      class="Item content Button text md"
    >
      Boom
    </div>
  </div>
</body>
`;

exports[`Item when children is a React node still renders 1`] = `
<body>
  <div>
    <div
      class="Item content Button text md"
    >
      <span>
        Span!
      </span>
    </div>
  </div>
</body>
`;
